--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <style>
         body{
-            background: black;
+            background-color: rgb(120, 200, 249);
         }
-        img{
+        /* img{
              height: 150px; box-shadow: 0px 10px 15px red;
-        }
+        } */
         p{
             font-size: 40px; background: rgb(140, 5, 5); color: rgb(108, 8, 248); margin: 50px 400px;
             padding: 5px; box-shadow: 0px 10px 20px rgb(43, 236, 69);
@@ -46,7 +46,7 @@
 </head>
 <body>
     <center>
-    <img src="aaaaa.jpg" alt="mypic">
+    <!-- <img src="aaaaa.jpg" alt="mypic"> -->
     <p>Mohd Ashhad Khan</p>
     <p class="a">S/O- Mohd Aslam Khan</p>
     <p class="b">From- Narayanpur Pritampur A.N. U.P.</p>
